[sndy] add fullscreen play feature

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,7 @@
     
     <!-- Custom styles for this template -->
     <link href="css/carousel-template.css" rel="stylesheet">
-    <!-- DIrect "import 'react-html5video/dist/styles.css';" is failing the babel compiler during test run, hence copied reuired styles in the mentioned css files -->
-    <!-- Did I fix an Error?-->
+    <!-- DIrect "import 'react-html5video/dist/styles.css';" is failing the babel compiler during test run(might be because I am on node4), hence copied required styles in the below mentioned css sheet -->
     <link href="css/react-html5video.css" rel="stylesheet">
 </head>
 
@@ -32,7 +31,7 @@
     </nav>
     <div class="container" id="app"></div>
     <div class="container fixed-footer">
-        <a href="https://github.com/sndy/react-video-carousel">Git It</a>
+        <a href="https://github.com/sndy/react-video-carousel" target="_blank">Git It</a>
     </div>
     <script src="client.min.js"></script>
 </body>
